kubernetes/apps/network/external-service/opnsense/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: internal-opnsense
spec:
  clusterIP: None
  ports:
    - port: 443
      targetPort: 443
      name: https
