kubernetes/apps/network/external-service/opnsense/httproute.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-opnsense
  labels:
    kubernetes.io/service-name: internal-opnsense
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.0.1
ports:
  - port: 443
    name: https
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: internal-opnsense
spec:
  ports:
    - port: 443
      targetPort: 443
      name: https
  clusterIP: None
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-service-httproute-opnsense
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - opnsense.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: internal-opnsense
          port: 443
