kubernetes/apps/network/external-service/opnsense/tlsroute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: external-service-tlsroute-opnsense
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal-tls.${SECRET_DOMAIN}"
spec:
  parentRefs:
    - name: envoy-internal-tls
      namespace: network
      sectionName: tls
  hostnames:
    - opnsense.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: internal-opnsense
          port: 443
